      - (je) Support TXT records containing a semicolon (bug 50165).
      - (je) Support backslashes in zone data (bug 12679).
      - (je) Support SRV records (bug 24402).
      - (je) Support names ending in what looks like a record type (bug 39006).
      - (je) Increase unit test coverage.
      - (je) Improve parsing for lines containing comments.

0.98 - Skipped

0.97 - Skipped

0.96 - Fri Nov 14 2008
      - (ms) Obtained co-maintainership to apply overdue patches
      - (ms) Applied SRV patch by Andrew Fresh: 
             http://rt.cpan.org/Public/Bug/Display.html?id=24402

0.95 - Sun Oct 24 2004
      - suppress $TTL directive in output() if the zone has no TTL defined
      - fix bug #7845 - zonefile and origin lost during parse.

0.94 - Thu Sep 2 2004
      - allow PTR records without an address (carries over from previous
        record). This doesn't seem to be forbidden by the standards (bug #7546)

0.93 - Wed Sep 1 2004
      - s/it's/its/ (RT bug #7533, Debian bug #268524)

0.92 - Sat Aug 21 2004
      - Fix reported bugs #3806, #4283, #7363, #7392 with thanks to
        Martin (mv <at> pdv-systeme <dot> de)

0.91 - Sun Aug 03 2003
      - fix bug #3028 - parsing AAAA records

0.90 - Sun May 11 2003
      - fix bug #2541 - PTR parse/output error

0.89 - Sat May 3 2003
      - small fix for perl 5.005

0.88 - Wed Apr 27 2003
      -  fix bug #2440 - parsing ambiguous records improved

0.87 - Wed Mar 26 2003
      - Bug fixes thanks to Alex Woods
      - fix bug #2290 - parsing MX records without name
      - fix bug #2291 - populate 'name' fields with parent name if undef

0.86 - Tue Mar 25 2003
      - bug fix in 0.85 introduced new bug. FIXED with test. (Thanks Alex Woods)
      - use opportunity to update API and BUGS sections in POD

0.85 - Mon Mar 24 2003
      - fix filehandle typo in lib/DNS/ZoneParse.pm
      - update tests to test object ctor for filename
      - fix parsing for RRs without CLASS

0.84 - Sun Mar 2 2003